fix: Collapsed mode spacings, glance splitting on an already split view and compact mode not setting a width on startup (closes https://github.com/zen-browser/desktop/issues/7239)

--- a/src/browser/base/content/zen-styles/zen-panel-ui.css
+++ b/src/browser/base/content/zen-styles/zen-panel-ui.css
@@ -29,5 +29,9 @@ panel {
     --panel-background: light-dark(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)) !important;
     --panel-border-color: transparent !important;
     --panel-shadow-margin: 0px !important;
+
+    &::part(content) {
+      animation: none !important;
+    }
   }
 }
