--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -628,7 +628,7 @@
 
 :root:not([zen-sidebar-expanded='true']) {
   --tab-min-width: 36px !important;
-  --zen-toolbox-padding: calc(var(--zen-element-separation) / 2 + 1px);
+  --zen-toolbox-padding: 6px !important;
   --zen-toolbox-max-width: calc(var(--tab-min-width) + var(--zen-toolbox-padding) * 2);
 }
 
